--- a/sprunki-clicker.html
+++ b/sprunki-clicker.html
@@ -90,7 +90,7 @@
 
         <div class="row">
             <div class="frame-box-game">
-                <iframe title="Sprunki Clicker" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="https://game.azgame.io/sprunki-clicker" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
+                <iframe title="Sprunki Clicker" id="iframehtml5" class="d-block" width="100%" height="600px" target="_parent" src="https://game.azgame.io/sprunki-clicker/" frameborder="0" border="0" scrolling="no" allowfullscreen=""></iframe>
                 <div class="header-game">
                     <div class="box-header">
                         <h1>Sprunki Clicker</h1>
