--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
   gtag('config', 'G-93DG32V40P');
 </script>
+	<script>
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://chickenjockeyclicker.com/capybara-clicker">
+    <script type="text/javascript">
+        window.location.href = "https://chickenjockeyclicker.com/capybara-clicker"
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
