--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   gtag('config', 'G-93DG32V40P');
 </script>
     <meta charset="utf-8">
+	"<meta http-equiv=""refresh"" content=""0; url=https://chickenjockeyclicker.com"">
+    <script type=""text/javascript"">
+        window.location.href = ""https://chickenjockeyclicker.com/""
+    </script>"
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="content-language" content="en">
